style.css
body{
  background-color: black;
  color: white;
  font-family: Futura, Arial, sans-serif;
  /* height: 99vh; */
}
.green {
  background-color: #149F71;
  color: black;
}
.blue {
  background-color: #1E5C9B;
  color: black;
}
.orange {
  background-color: #EE651E;
  color: black;
}
.yellow {
  background-color: #EE9B1E;
  color: black;
}
.nav {
  width: 95%;
}
.navbar-nav li{
  margin-right: 5%;
}
.navbar-nav li:last-child{
  float: right;
}
.donatePaypal{
  margin: 0;
  display: inline;
}
[type=image]{
  padding-top: 20%;
}
@media screen and (max-width: 992px) {
  .nav {
    width: 92%;
  }
  .navbar-nav li{
  margin-right: 2%;
}
}

@media screen and (max-width: 767px) {
 [type=image]{
  padding-top: 0;
}
.navbar-nav li:last-child{
  float: none;
}
}

.title {
  border: 5px solid #EE9B1E;
  border-radius: 25px;
  margin-bottom: 1%;
}


.gamesList {
  height: 100vh;
  overflow: scroll;
}
.mainButton {
  height: 35%;
  display: flex;
  justify-content: center;
  align-items: center;
}
::-webkit-scrollbar {
  width: 0;
  background: transparent;
}

/******************************************************************/
/*this is the beginning of Soy's index.html css*/
.view-width{
  width:inherit;
  text-align: center;
}

.body_black {
  background-color: black;
}

div {
  font-family: Futura, Arial, sans-serif;
  text-align : center;
  /*margin:10px;*/
}

.font_white{
  color:white;
}

.font_reg{
  font-size: 100%;
}

.font_md{
  font-size: 250%;
}

.font_lg{
  font-size: 500%;
}

.home_page_body{
  width:99vw;
  height: 99%;
  /* display: inline-block; */
  padding-top: 5%;
}

@media screen and (max-width: 991px) {
  .home_page_body{
  padding-top: 20%;
}
}

.title_box{
  height: 10%;
  margin-bottom: 40px;
}

/*mobile version*/
@media(max-width:415px) {
  .title_box {
    height: auto;
    margin-bottom: auto;
  }
}

.menu_button{
  float:left;
  margin-left:1%;
}
.about_page {
  display: inline-block;
  text-align: center;
  height:10%;
}

.columns_body{
  width: 100vw;
  height:99vh;
  padding-top: 2%;
}

@media screen and (max-width: 721px) {
  .columns_body{
    padding-top: 5%;
  }
}

.temp_logo {
  width:100px;
  height:100px;
  display:inline-block;
}

.google-login ,.facebook-login{
  border-radius: 25px;
  margin-bottom: 1%;
}

.padding_unset{
  padding:unset;
}

.search{
  font-size: 19px;
}

.margin_bottom{
  margin-bottom:3%;
}

form{
  margin:0px 0px 10px 0px;
  overflow: scroll;
}

.footer{
  position: fixed;
  bottom: 2%;
  left: 0;
  width: 100%;
  height: 5%;
}

@media(max-width: 768px){
  .footer{
    position: relative;
    bottom:-6%;
    left: 0;
    width:100%;
    height:10%;
    background-color: transparent;

  }
}

.topnav {
  display: inline-block;
  background-color: rgba(0,0,0,0.7);
  color: white;
  width: 100vw;
  #height:10vh;
  #margin: 0px 0px 10px 0px;
  #padding: 0px;
 font-size: large;
  #line-height: 9vh;
  text-align: center;

}

.header-font {
  font-family: 'Bungee Inline', cursive;
}

.content-font {
  font-family: 'Cambay', sans-serif;
}

.topnav a {
  width: 19%;
  display: inline-block;
}

@media(max-width:415px) {
  .topnav a {
    width: 18%;
    display: inline-block;
  }
}

@media (min-width:768px){
  .topnav {
    margin: 0px auto;
    font-size: xx-large;
    height: 8%;
  }

}

  #home:hover{
    color: white;
  }
  #about:hover{
    color: white;
  }
  #blog:hover{
    color: white;
  }
  #contact:hover{
    color: white;
  }
  #profile:hover{
    color: white;
  }



/*this is the end of Soy's index.html css*/
/******************************************************************/
/*This is the beginning of Soy's contact us page*/
@media(min-width: 767px) {
  .contact_form_div {
    width: 50%;
    height: 50%;
    color: white;
    border-radius: 25px;
    background-color: rgba(0, 0, 0, .6);
    margin: 10px 0 5px 0;
    padding: 5px 0 10px 5px;
    transform: translateX(50%);
  }
}

@media(max-width: 767px){
  .contact_form_div {
    height:50%;
    width:100%;
    color: white;
    border-radius:25px;
    background-color: rgba(0,0,0,.6);
    margin: 10px 5px 10px 5px;
    padding: 0;
    transform: translateX(0%);
  }
  .contact_form{
    display: table-caption;
    transform: translateX(26%);
  }
}

.form-group input {
  color:black;
}

/******************************************************************/
/*This is the beginning of Soy's create events page*/
.create_event_background{
  background-image: url("./imgs/boardgame.jpg");
  position: absolute;
  width:100vw;
  height:200%;
  opacity:0.2;
  #bottom: -2%;
  #left: 0%;
  background-size:cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
}

.create_event_margin{
  margin:auto;
}

.margin_top{
  margin-top:1%;
}

.event_host_div {
  display: inline-block;
  width: 60%;
  height:auto;
  border-radius: 25px;
  position: inherit;
  padding:2%;
  background-color: #191919;
  color:black;
}

@media(max-width:415px) {
  .event_host_div {
    display: inline-block;
    width: 99%;
    height: 99%;
    border-radius: 25px;
    position: relative;
    background-color: rgba(0,0,0,.7);
    color:black;
    margin-top: 1%;
  }
}

.form-horizontal{
  display: inline-block;
  width: 80%;
  color: white;
}

@media(max-width:415px) {
  .form-horizontal{
    display: inline-block;
    width: 99%;
    height: auto;
    color: white;
  }
}


.form-event-pad {
  padding-left: 37px;
}

.text-width {
  width: 80%;
}

@media(max-width:415px) {
  .form-event-pad {
    padding:inherit;
    margin: 1%;
  }
}

.app-form{
  display:inline-flex;
}

span.app-form{
  display: inline-block;
  text-align: right;
}

@media(max-width:415px) {
  span.app-form{
    display: inline-block;
    text-align: right;
  }
}

input,select,textarea {
  color:black;
}

@media(max-width:415px) {
  input,select,textarea {
    color:black;
    margin:1%;
  }
}

.title_ab_position{
  position: absolute;
}

.title_rel_position{
  position: relative;
}


/******************************************************************/
/*Beginning of nearby games style*/
.column_height{
  height:auto;
}

.nearby-display{
  display: block;
}

@media(min-width:768px){
  .nearby-display{
    display: block;
  }
}

@media(min-width:769px){
  .nearby-display{
    display: -webkit-box;
  }
}

.title_scroll {
  overflow: scroll;
}


.max-width{
  max-width:inherit;
}

#map {
  height: 99%;
  /*width: 64%;*/
}

@media (max-width: 768px) {
  #map {
    height: inherit;
    width: -webkit-fill-available;
  }
}

  .info-column-div{
    #background-color: black;
    color: white;

  }

/*mobile-version*/
@media (max-width: 768px) {
  .info-column-div {
    #background-color: black;
    color: white;
    padding:1%;
    margin:0 auto;
  }
}

/*desktop version*/
@media (min-width: 992px) {
  .info-column-div {
    text-align: left;
    #background-color: black;
    color: white;
    height: 69vh;
    overflow-y: unset;
    #padding:0px;
    font-size: x-large;
    /*margin: 0 .5% 0 .5%;*/
  }
}

.details{
  font-size: 16px;
}

/*desktop version*/
@media (min-width: 992px) {
  .gamesContainer {
    text-align: left;
    padding: 0px;
    #background-color: black;
    color: white;
  }
}

/*mobile-version*/
@media (max-width: 450px) {
  .gamesContainer {
    text-align: left;
    padding: 0px;
    #background-color: black;
    color: white;
    height:auto;
    font-size: x-large;
  }
}

.game:hover{
  background-color: #00a0d2;
  color:black;
}

.info-and-map {
  padding: 0;
  margin: 0;
  height: 69vh;
}

@media(max-width:415px) {
  .info-and-map {
    padding: 0;
    margin: 3%;
    height: 99vh;
    overflow-y: scroll;
  }
}

.eventInfo {
  background-color: black;
  color: white;
  height:auto;
  font-size: x-large;
}

/*/homepage, create event,contact us,desktop/*/

@media (min-width: 768px) {
  .button_container {
    position: absolute;
    /*transform: translateX(0%);*/
    margin: 2%;
  }
}

/*/homepage, create event,contact us, mobile/*/
@media (max-width: 900px) {
  .button_container {
    position: relative;
    transform: translateX(0%);
    margin: 2%;
  }
}

/*nearby games, player, desktop*/

@media (min-height: 650px) {
  .button_container2 {
    position: absolute;
    transform: translateX(120%);
    margin: 2%;
  }
}

/*nearby games, player , mobile*/
@media (min-height: 315px) {
  .button_container2 {
    position: absolute;
    transform: translate(0%);
    margin: 2%;
  }
}

/******************************************************************/
/*Beginning of player profile style*/

.profile_overflow{
  overflow: scroll;
}

.tableB {
  border: 1px solid white;
}

.table-hover thead:hover {
  background-color: rgba(0, 0, 0, 0.46);
}
.table-hover tbody:hover {
  background-color: rgba(0, 160, 210, .7);
  color: black;
}

.div_padding {
  padding: 10px 5px 10px 5px;
}

.profile_info_div {
  height: auto;
  margin: 10px 0 10px 0;
  font-size: x-large;
}

@media(max-width: 500px){
  .profile_info_div {
    height: auto;
    font-size: initial;
  }
}

.profile_info_div > input, select, textarea {
  color: black;
  background-color: white;
  width: -webkit-fill-available;
}

select#fav_genre, input#first_name {
  color: black;
  background-color: white;
  width: -webkit-fill-available;
}


.profile-form > span {
  padding: 2px 0 2px 0;
  margin: 1%;
}

.profile-form > input {
  padding: 2px 0 2px 0;
}


.profile-img-size{
  max-height: fit-content;
  max-width: fit-content;
}

@media(max-width: 500px){
  .profile-img-size{
    max-height: 75%;
    max-width: 75%;
  }
}


/******************************************************************/


.truncate {
  text-align: left;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  text-align: left;
}

.hidden {
  display: none;
}
.shadowBox {
  position: fixed;
  top: 0;
  left: 0;
  background-color: black;
  opacity: 0.6;
  z-index: 100;
  height: 100%;
  width: 100%;
}
.loginModal {
  position: fixed;
  z-index: 200;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  box-sizing: border-box;
  background-color: #29bc2c;
  height: 30%;
  width: 35%;
  text-align: center;
  border-radius: 25px;
}

@media(max-width: 400px) {
  .loginModal {
    width: inherit;
  }
}

.game {
  padding:unset;
  cursor: pointer;
}

.date{
  background-color: #EE651E;
  color: black;
}

.time{
  background-color: #1E5C9B;
  color: black;
}

.header-scroll {
  overflow-y: unset;
  padding-top: 3%;
}

@media(max-width:991px) {
  .header-scroll {
    padding-top: 8%;
}
}

#applyModal, #createEventModal {
  color: black;
}

@media (max-width: 415px) {
  .header-scroll {
    overflow-y: scroll;
  }
}

#eventCreation{
  margin: 1%;
  letter-spacing: 1px;
}

